Only apply updates to signs that are loaded